<resources>
    <string name="app_name">HMSCourseDemoA</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_scan">Scan Kit</string>

    <string name="menu_map">Map</string>
    <string name="menu_remote">Remote Config</string>
    <string name="menu_nearby">Nearby</string>
    <string name="menu_iap">IAP</string>
    <string name="menu_safety">Safety Detect</string>

    <string name="owner">Course Demo</string>
    <string name="copyright_info">Huawei</string>
    <string name="channel_name">Push Notification Channel</string>
    <string name="channel_description">Channel for displaying notifications</string>
    <string name="channel_id">Push</string>
    <string name="ok">OK</string>

    <string name="my_name">My name:</string>
    <string name="friends_name">Friend\'s name:</string>
    <string name="begin">Begin to chat!</string>
    <string name="send">Send</string>
    <string name="input_message_here">Your Message</string>
    <string name="menu_panorama">Panorama</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="consumable">Consumable</string>
    <string name="nonConsumable">Non-consumable</string>
    <string name="invalidIAPCountry">IAP is not supported in your country/region</string>
    <string name="unknownError">An error occurred</string>
</resources>