<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_remote"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_remote" />
        <item
            android:id="@+id/nav_nearby"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/menu_nearby" />
        <item
            android:id="@+id/nav_iap"
            android:icon="@drawable/ic_shopping_bag_black_24dp"
            android:title="@string/menu_iap" />

        <item
            android:id="@+id/nav_safety"
            android:icon="@drawable/ic_shield_black_24dp"
            android:title="@string/menu_safety"/>
        <item
            android:id="@+id/nav_panorama"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_panorama"/>


    </group>
</menu>